--- a/login.html
+++ b/login.html
@@ -43,8 +43,7 @@
                         <div class="card-body p-md-5">
                             <div class="row justify-content-center">
                                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4"> Please Login to use the
-                                        system.</p>
+                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4"> Login </p>
                                     <form class="mx-1 mx-md-4">                                        
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
@@ -148,7 +147,7 @@
                                 </div>
                                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
-                                    <img src="" class="img-fluid rounded-3" alt="Sample image">
+                                    <img src="./bg-trw.jpg" class="img-fluid rounded-3" alt="Sample image">
 
                                 </div>
                             </div>
