--- a/register.html
+++ b/register.html
@@ -86,7 +86,7 @@
                                 </div>
                                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
-                                    <img src="" alt="Sample image">
+                                    <img src="./bg-trw.jpg" class="img-fluid" alt="Sample image">
 
                                 </div>
                             </div>
